# SASAbs_saxs-absolute-calibration

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SASAbs.py  Start_SAXSAbs_Workbench.bat  audit-report-20260714-final.md  audit-report.md  codemeta.json  generate_joss_paper.py  pyproject.toml  saxs_mpl_style.py  saxsabs_workbench.py  saxsabs_workbench.pyw
.audit-work/: changes.md  evidence.md  findings.md  state.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  bl19b2_abs2d_batch_runbook.md  impact-evidence-template.md  joss-submission-checklist.md  reviewer-faq.md  scientific_safety_ui_upgrade_audit_20260713.md
examples/: header_example.json  impact_metrics_template.csv  k_measured.csv  k_reference.csv  manual-verification.md  profile_example.csv
examples/bl19b2_abs2d_template/: processing_config.example.yml
examples/minimal_2d/: README.md  run_minimal_2d_pipeline.py  synthetic_detector_image.csv  synthetic_geometry.json
paper/: capture_gui_screenshot.py  generate_figures.py  jac_calibrated2d_draft.md  jac_calibrated2d_refs.bib  paper.bib  paper.md
src/saxsabs/: __init__.py  __main__.py  cli.py  constants.py  workbench_launcher.py
src/saxsabs/core/: __init__.py  buffer_subtraction.py  calibration.py  calibration_context.py  calibration_record.py  detector_reduction.py  execution_policy.py  intensity_state.py  material_attenuation.py  mu_calculator.py  normalization.py  preflight.py  reference_matching.py  session_grouper.py  uncertainty.py  workbench_preflight_gate.py
src/saxsabs/io/: __init__.py  calibrated2d.py  parsers.py  writers.py
src/saxsabs/workflows/: __init__.py  bl19b2_abs2d.py  bl19b2_integrate1d.py
submission/softwarex/: README.md  cover_letter.md  declarations.md  graphical_abstract_note.md  highlights.txt  softwarex_manuscript.md  softwarex_submission_checklist.md  suggested_reviewers_template.md  upload_instructions.md
tests/: test_bl19b2_abs2d.py  test_bl19b2_integrate1d.py  test_buffer_subtraction.py  test_calibrated2d_export.py  test_calibration.py  test_calibration_context.py  test_calibration_record.py  test_cli.py  test_detector_reduction.py  test_execution_policy.py  test_intensity_state.py  test_io_formats.py  test_material_attenuation.py  test_minimal_2d_example.py  test_mu_calculator.py  test_normalization.py  test_parsers.py  test_plot_style.py  test_preflight.py  test_public_exports.py  test_reference_matching.py  test_session_grouper.py  test_uncertainty.py  test_version_metadata.py  test_workbench_launcher.py  test_workbench_output_paths.py  test_workbench_preflight_gate.py  test_workbench_scientific.py
