[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saxsabs"
version = "1.1.1"
description = "SAXS absolute intensity calibration and robust 1D profile utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Delun Gong", email = "dlgong@imr.ac.cn" }
]
keywords = ["SAXS", "absolute intensity", "calibration", "synchrotron", "scattering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "xraydb>=4.5",
]

[project.optional-dependencies]
gui = [
  "pyFAI>=2023.0",
  "fabio>=2023.0",
  "matplotlib>=3.7",
  "sv-ttk>=2.6",
]
io = ["fabio>=2023.0"]
hdf5 = ["h5py>=3.8"]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
saxsabs = "saxsabs.cli:main"
saxsabs-workbench = "saxsabs.workbench_launcher:main"

[project.urls]
Homepage = "https://github.com/D-sudoasd/SASAbs_saxs-absolute-calibration"
Repository = "https://github.com/D-sudoasd/SASAbs_saxs-absolute-calibration"
Issues = "https://github.com/D-sudoasd/SASAbs_saxs-absolute-calibration/issues"
Changelog = "https://github.com/D-sudoasd/SASAbs_saxs-absolute-calibration/blob/main/CHANGELOG.md"
DOI = "https://doi.org/10.5281/zenodo.19687104"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
